fixed flex basis on article card back which was causing cards to scale unevenly

--- a/src/index.css
+++ b/src/index.css
@@ -274,6 +274,7 @@ nav li {
   display: flex;
   justify-content: center;
   gap: 2em;
+  margin-bottom: 1em;
 }
 
 @media (min-width: 700px) {
@@ -476,11 +477,11 @@ featured-image-container {
   justify-content: center;
 }
 
-@media (min-width: 1300px) {
+/* @media (min-width: 1300px) {
   .articles-display {
     justify-content: flex-start;
   }
-}
+} */
 
 .article-card {
   min-width: 340px;
@@ -497,11 +498,11 @@ featured-image-container {
   align-items: center;
 }
 
-@media (min-width: 1300px) {
+/* @media (min-width: 1300px) {
   .article-card {
     margin-bottom: 0;
   }
-}
+} */
 
 .article-card p {
   font-size: 1em;
@@ -583,6 +584,7 @@ featured-image-container {
 
 .article-card-back {
   min-width: 340px;
+  max-width: 30%;
   background-color: var(--highlight-color);
   color: white;
 
@@ -594,6 +596,8 @@ featured-image-container {
   aspect-ratio: 1 / 1.3;
   border-radius: var(--border-radius);
   box-shadow: var(--box-shadow);
+  margin-bottom: var(--standard-spacing);
+  flex: 1 1 auto;
 }
 
 .subheading-back {
